SimpleComplex/Config 1.x, 2017-08-17
------------------------------------
- Export ini file based configuration: sort by section.

SimpleComplex/Config 1.x, 2017-08-10
------------------------------------
- Clarified a EnvConfig and EnvSectionedConfig's getInstance() methods;
  which btw only makes sense because these two classes are singleton'ish.

SimpleComplex/Config 1.x, 2017-08-08
------------------------------------
- Renamed ConfigException (from ConfigurationException) to stress that it should
  only be used within this package.

SimpleComplex/Config 1.x, 2017-08-04
------------------------------------
- .ini files within same path append to eachother, whereas later path(s)
  override previous (base) path(s); the use of array_merge_recursive()
  and array_replace_recursive() is deliberate and not a mistake.

SimpleComplex/Config 1.x, 2017-07-20
------------------------------------
- Cli script find vendor dir fix.

SimpleComplex/Config 1.x, 2017-07-12
------------------------------------
- Release 1.0.

SimpleComplex/Config 1.x, 2017-07-11
------------------------------------
- Renamed override configuration dirs (from 'operations'), and clarified
  documentation.

SimpleComplex/Config 1.x, 2017-07-03
------------------------------------
- Ini-based constructor shan't establish source paths unless required;
  that is: if the cache store is new and source ini files thus have to be read.
- Ini-based use CacheBroker persistent cache class instead of setting ttl
  default and ignore on cache store instance.

SimpleComplex/Config 1.x, 2017-07-02
------------------------------------
- New control instance var parseTyped.
- Added escapeSourceKeys and parseTyped to explorable instance vars.
- Added example .ini file.
- Ini based config support safe mode 'candidate' cache build;
  spells far safer refresh().
- Export from cache.

SimpleComplex/Config 1.x, 2017-07-01
------------------------------------
- .ini based export from sources, as JSON to file.
